# llm-zoomcamp-2026-homework

./: .gitignore  notebook.ipynb  pyproject.toml
01-agentic-rag/: homework.ipynb  ingest.py  rag_helper.py
02-vector-search/: homework.ipynb
03-orchestration/: homework.ipynb
04-evaluation/: evaluation_utils.py  homework.ipynb
05-monitoring/: homework.ipynb
dlt-workshop/: homework.ipynb  main.py  pipeline.py
